fix: avoid having too much space between multi-select chips

--- a/src/shared/customComponents/MultiSelect/style.css
+++ b/src/shared/customComponents/MultiSelect/style.css
@@ -59,9 +59,6 @@
 }
 
 .multi-select__body__chip-container {
-    display: grid;
-    grid-auto-flow: column;
-    column-gap: 8px;
     overflow-x: auto;
 
     width: 100%;
